--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>Chit-Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
